# rust-leprosorium

./: .gitignore  Cargo.toml  FALLOUT_TECHNICAL_BLUEPRINT.md  LICENSE  README.md  README_RUST_NOTES.md  TECH_DEBT.md  username.txt
best_time_to_buy_and_sell_stock/: Cargo.toml
best_time_to_buy_and_sell_stock/src/: lib.rs
climbing_stairs/: Cargo.toml
climbing_stairs/src/: lib.rs
contains_duplicate/: Cargo.toml
contains_duplicate/src/: lib.rs
find_all_numbers_disappeared_in_an_array/: Cargo.toml
find_all_numbers_disappeared_in_an_array/src/: lib.rs
middle_of_the_linked_list/: Cargo.toml
middle_of_the_linked_list/src/: lib.rs
migrations/: 20260226211000_create_notes.sql  20260226212000_add_notes_created_at_index.sql
minigrep/src/: main.rs
missing_number/: Cargo.toml
missing_number/src/: lib.rs
single_number/: Cargo.toml
single_number/src/: lib.rs
src/: app.rs  error.rs  front_of_house.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs  store.rs  util.rs  views.rs
src/front_of_house/: hosting.rs  serving.rs
src/front_of_house/hosting/: add_to_waitlist.rs  seat_at_table.rs
src/front_of_house/serving/: serve_order.rs  take_order.rs  take_payment.rs
templates/: index.html  note_edit_form.html  note_not_found.html  note_view.html  notes_list.html  notes_list_oob.html
two_sum/src/: lib.rs
