[package]
name = "rust-leprosorium"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
axum = "0.7"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
