[package]
name = "rust-leprosorium"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
axum = "0.8.8"
pulldown-cmark = "0.13.0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7"] }
