[package]
name = "rust-leprosorium"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
askama = "0.14"
axum = "0.8.8"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.13.0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
